--- a/Pasta de arquivos HTML E JavaScipt/pagina.html
+++ b/Pasta de arquivos HTML E JavaScipt/pagina.html
@@ -11,6 +11,7 @@
 
   <script src="./index.js"></script>
   <scrip src="./arquivo.js"></scrip>
+  <script src="./Recursos_Nativos_Navegador.js"></script>
 
 </body>
 </html>
